--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -20,10 +20,10 @@
     </audio>
   </div>
   <div id="player-buttons">
-    <a class="player-button" id="player-minimize" href="#" aria-label="Minimize">
+    <a class="btn btn-dope player-button" id="player-minimize" href="#" aria-label="Minimize">
       <i class="fas fa-minus-circle icon"></i>
     </a>
-    <a class="player-button" id="player-close" href="#" aria-label="Close">
+    <a class="btn btn-dope player-button" id="player-close" href="#" aria-label="Close">
       <i class="fas fa-times-circle icon"></i>
     </a>
   </div>
