--- a/index/static/style.css
+++ b/index/static/style.css
@@ -3,7 +3,7 @@ body {
   line-height: 1.42857143;
   color: #2e2e2e;
   font-size: 14px;
-  background: #eee;
+  background: #fff;
   transition: background 0.5s ease;
 }
 .darken {
@@ -46,7 +46,6 @@ body {
 .toggle[aria-expanded="true"] {
   color: #fff;
   background: rgba(0, 191,165, 1);
-
 }
 .reverse-toggle[aria-expanded="false"] {
   color: #fff;
@@ -129,30 +128,27 @@ body {
 #navbar-drop {
   padding: 0;
 }
-#navbar .navbar-toggler:hover {
-  color: #2e2e2e;
-  background: #ddd;
-}
 .nav-link-dope  {
   font-weight: 600;
   background: none!important;
   display: inline-block;
   border: none;
-  border-bottom: 2px solid rgba(167, 255, 235, 0);
-  color: rgba(255, 255, 255, 1);
+  color: rgba(0, 0, 0, 1);
   font-size: 16px;
   padding: 5px;
-  transition: border .25s ease-in-out;
-  -moz-transition: border .25s ease-in-out;
-  -webkit-transition: border .25s ease-in-out;
+  transition: all .25s ease-in-out;
+  -moz-transition: all .25s ease-in-out;
+  -webkit-transition: all .25s ease-in-out;
 }
 .nav-link-dope:hover {
-  border-bottom: 2px solid rgba(167, 255, 235, 1);
   text-decoration: none;
   color: rgba(255, 255, 255, 1);
 }
 .nav-link-dope:focus {
   outline: rgba(0,0,0,0);
+}
+.nav-link-dope[aria-expanded="true"] {
+  color: #fff;
 }
 
 @keyframes spinLeft {
@@ -604,9 +600,6 @@ body {
   z-index: 95;
   margin-top: 44px;
 }
-#multibar .nav-link-dope {
-  color: #000;
-}
 #multibar-drop {
   padding: 0;
 }
@@ -729,10 +722,9 @@ body {
   margin-right: 5px;
 }
 .error-message {
-  background: #a7ffeb;
-  margin: 5px;
-  border-radius: .25rem;
-  border: 2px solid rgba(0, 191,165, 1);
+  padding: 4px 6px;
+  background: rgba(230, 81, 0, .5);
+  margin-bottom: 2px;
 }
 #login-wrapper {
   padding: 10px 10px 0;
@@ -765,29 +757,20 @@ body {
   color: #fff;
 }
 .done {
-  height: 456px;
-}
-.done-content {
   text-align: center;
   margin: auto;
-  width: 150px;
-  height: 150px;
+  border: 2px solid rgba(0, 191,165, 1);
+  width: 200px;
   padding: 10px;
   border-radius: .25rem;
-  -webkit-box-shadow: rgba(0,0,0,1) 0 0 4px;
-  -moz-box-shadow: rgba(0,0,0,1) 0 0 4px;
-  box-shadow: rgba(0,0,0,1) 0 0 4px;
+  -webkit-box-shadow: rgba(0,0,0,1) 0 0 5px;
+  -moz-box-shadow: rgba(0,0,0,1) 0 0 5px;
+  box-shadow: rgba(0,0,0,1) 0 0 5px;
 }
 
 /* DASHBOARD */
 #dashboard-top {
   text-align: center;
-  padding: 30px;
-  margin: auto;
-  -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
-  -moz-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
-  box-shadow: rgba(0,0,0,.3) 0 1px 3px;
-  font-size: 16px;
 }
 
 /* SETTINGS */
@@ -1115,6 +1098,7 @@ hr.h-line {
 }
 #player-wrapper {
   position: relative;
+  padding-top: 10px;
   border: 2px solid rgba(0, 191,165, 1);
   border-top: none;
   border-radius: 0 0 .25rem .25rem;
@@ -1204,14 +1188,12 @@ hr.h-line {
   overflow: hidden;
 }
 #player-buttons {
-  font-size: 20px;
   position: absolute;
-  top: 0;
-  right: 0;
-  padding: 5px 0;
+  bottom: 10px;
+  right: 15px;
 }
 .player-button {
-  margin-right: 10px;
+  margin-left: 4px;
 }
 
 /* FOOTER */
