--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -18,7 +18,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'style.css' %}">
   </head>
+{% if user.profile.dark_theme %}
+  <body class="darken">
+{% else %}
   <body>
+{% endif %}
     <!--HERE BE NAVBAR-->
     <nav class="navbar fixed-top color-1-trans" id="navbar">
       <div class="container" id="navbar-drop">
