--- a/login/templates/account/done.html
+++ b/login/templates/account/done.html
@@ -1,12 +1,10 @@
-<div class="row done">
-  <div class="col-auto done-content">
-    <p>
-      {{ message }}
-    </p>
-    {% if not request.is_ajax %}
-      <a href="/">
-        Back
-      </a>
-    {% endif %}
-  </div>
+<div class="col-auto done">
+  <span>
+    {{ message }}
+  </span>
+  {% if not request.is_ajax %}
+    <a href="/">
+      Back
+    </a>
+  {% endif %}
 </div>
