--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,5 +1,5 @@
 <div class="col-auto col-md-5" id="navbar-l">
-  <a class="nav-link-dope d-inline-block d-lg-none navbar-multibar-options-toggle">
+  <a class="nav-link-dope d-inline-block d-lg-none multibar-options-toggle" href="#multibar-options-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="multibar-options-collapse">
     <i class="fas fa-bars icon"></i>
   </a>
 </div>
