--- a/index/templates/multibar.html
+++ b/index/templates/multibar.html
@@ -1,7 +1,7 @@
 <div class="col-auto col-lg-5" id="multibar-l">
   <div class="player-badge d-none player-image-drop">
   </div>
-  <a class="multibar-options-toggle toggle" href="#multibar-options-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="multibar-options-collapse">
+  <a class="multibar-options-toggle" href="#multibar-options-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="multibar-options-collapse">
     <div class="player-badge noselect color-3 player-logo">
       <span class="char char-1">d</span>
       <span class="char char-2">o</span>
