--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -48,7 +48,7 @@ settings
         </label>
       </div>
       <div class="form-check form-check-inline">
-        <label class="form-check-label" for="show_explicit">
+        <label class="form-check-label" for="dark_theme">
           {% if profile_form.dark_theme.value %}
             <input class="form-check-input" type="checkbox" name="dark_theme" id="dark_theme" checked />
           {% else %}
