--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -32,8 +32,8 @@
     <!-- MAIN CONTENT -->
     <div id="main-wrapper">
       <div class="container-fluid sticky-top extended" id="flap">
-        <div class="container open" id="xxx">
-          <div class="row color-5-trans" id="center-stage">
+        <div class="container color-5-trans open" id="xxx">
+          <div class="row" id="center-stage">
             {% block center-stage %}
             {% endblock %}
           </div>
