--- a/index/static/style.css
+++ b/index/static/style.css
@@ -1152,10 +1152,12 @@ hr.h-line {
 }
 #player-bottom {
 }
+
 #player-top {
   height: 40px;
   padding: 10px 0;
   margin-left: 100px;
+  margin-right: 100px;
   white-space: nowrap;
   overflow: hidden;
   display: block;
@@ -1170,12 +1172,18 @@ hr.h-line {
   max-height: 35px;
   overflow: hidden;
 }
-#player-buttons {
+#player-bottom .dummy {
   display: inline-flex;
   float: right;
+  width: 80px;
+  height: 45px;
+}
+#player-buttons {
+  right: 15px;
+  bottom: 10px;
+  position: absolute;
 }
 .player-button {
-  margin-bottom: 10px;
   margin-left: 4px;
 }
 
