--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -18,14 +18,16 @@
     <audio id="audio-el" controls preload="metadata" autoplay>
       <source src="{{ player.episode.url }}"/>
     </audio>
-    <div id="player-buttons">
-      <a class="btn btn-dope player-button" id="player-minimize" href="#" aria-label="Minimize">
-        <i class="fas fa-minus-circle icon"></i>
-      </a>
-      <a class="btn btn-dope player-button" id="player-close" href="#" aria-label="Close">
-        <i class="fas fa-times-circle icon"></i>
-      </a>
+    <div class="dummy">
     </div>
+  </div>
+  <div id="player-buttons">
+    <a class="btn btn-dope player-button" id="player-minimize" href="#" aria-label="Minimize">
+      <i class="fas fa-minus-circle icon"></i>
+    </a>
+    <a class="btn btn-dope player-button" id="player-close" href="#" aria-label="Close">
+      <i class="fas fa-times-circle icon"></i>
+    </a>
   </div>
 </div>
 {% endif %}
