--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -44,10 +44,6 @@
             {% include 'multibar.html' %}
           </div>
         </nav>
-        <!-- PLAYER -->
-        <div class="container" id="player-drop">
-          {% include 'player.html' %}
-        </div>
       </div>
       <!-- MAIN -->
       <div class="container"id="main">
@@ -96,6 +92,10 @@
           {% endif %}
         </div>
       </div>
+    </div>
+    <!-- PLAYER -->
+    <div class="container-fluid" id="player-drop">
+      {% include 'player.html' %}
     </div>
     <!--FOOTER-->
     <footer class="footer">
