--- a/index/static/style.css
+++ b/index/static/style.css
@@ -1077,6 +1077,13 @@ hr.h-line {
 }
 
 /* PLAYER */
+#player-drop {
+  z-index: 9000;
+  padding: 0;
+  position: fixed;
+  bottom: 0;
+  margin: auto;
+}
 #player-wrapper a, #player-wrapper a:hover {
   color: #2e2e2e;
   text-decoration: none;
@@ -1085,8 +1092,8 @@ hr.h-line {
   position: relative;
   padding-top: 10px;
   border: 2px solid rgba(0, 191,165, 1);
-  border-top: none;
-  border-radius: 0 0 .25rem .25rem;
+  border-bottom: none;
+  border-radius: .25rem .25rem 0 0;
   -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
   -moz-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
   box-shadow: rgba(0,0,0,.3) 0 1px 3px;
@@ -1141,47 +1148,37 @@ hr.h-line {
   transform: rotate(300deg);
 }
 .player-image-drop {
-  height: 70px;
-  width: 70px;
 }
 #player-image {
-  width: 100px;
 }
 #player-image img {
-  border-radius: 50%;
+  float: left;
+  border-radius: .25rem;
+  margin-right: 5px;
 }
 #player-bottom {
 }
 
 #player-top {
-  height: 40px;
-  padding: 10px 0;
-  margin-left: 100px;
-  margin-right: 100px;
-  white-space: nowrap;
-  overflow: hidden;
-  display: block;
-  font-size: 16px;
-  position: relative;
+
 }
 #player-title {
-  position: absolute;
+  position: relative;
+  overflow: hidden;
+  margin: 5px 0 15px 0;
+}
+#player-title span {
+  white-space: nowrap;
 }
 #player-episode {
-  display: block;
-  max-height: 35px;
+  position: relative;
   overflow: hidden;
 }
-#player-bottom .dummy {
-  display: inline-flex;
-  float: right;
-  width: 80px;
-  height: 45px;
+#player-episode span {
+  white-space: nowrap;
 }
 #player-buttons {
-  right: 15px;
-  bottom: 10px;
-  position: absolute;
+  float: right;
 }
 .player-button {
   margin-left: 4px;
