--- a/index/static/style.css
+++ b/index/static/style.css
@@ -882,6 +882,7 @@ body {
 .results-header .header {
   font-size: 20px;
   line-height: 1.5;
+  margin: 0;
 }
 .results-content a {
   color: #000;
@@ -890,6 +891,7 @@ body {
   text-decoration: none;
 }
 .results-buttons {
+  padding-top: 4px;
   justify-content: flex-end;
   display: -ms-flexbox;
   display: flex;
@@ -1046,8 +1048,6 @@ body {
   overflow: hidden;
   height: 40px;
 }
-.browse-results {
-}
 .browse-results-list {
   font-size: 14px;
   padding-left: 0;
@@ -1058,9 +1058,14 @@ body {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  height: 24px;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+.browse-results-list li a {
+  border-bottom: 2px solid rgba(0, 191,165, 0);
+}
+.browse-results-list li a:hover, .browse-results-list li a:focus {
+  border-bottom: 2px solid rgba(0, 191,165, 1);
 }
 hr.h-line {
   height: 1px;
