--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -90,6 +90,9 @@
               {% include 'results_base.html' %}
             {% endwith %}
           {% endif %}
+          {% if results.last_played %}
+            {% include 'last_played.html' %}
+          {% endif %}
         </div>
       </div>
     </div>
