--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -1,4 +1,4 @@
-<div class="col col-lg-8 results color-5-trans">
+<div class="col results color-5-trans">
   <div class="row results-bar">
     <div class="col-12 results-header">
       {% if results.extra_options %}
@@ -143,8 +143,3 @@
     </div>
   {% endif %}
 </div>
-{% if results.last_played %}
-  <div class="col col-lg-4">
-    {% include 'last_played.html' %}
-  </div>
-{% endif %}
